--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-google-generativeai>=0.7.0
-gspread
-oauth2client
-Pillow
-pandas
+streamlit>=1.28.0
+google-generativeai>=0.8.2
+gspread>=5.12.0
+oauth2client>=4.1.3
+Pillow>=10.0.0
+pandas>=2.0.0
