--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit>=1.28.0
-google-generativeai==0.8.3
-gspread>=5.12.0
-oauth2client>=4.1.3
-Pillow>=10.0.0
-pandas>=2.0.0
+streamlit
+google-generativeai
+gspread
+oauth2client
+Pillow
