--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-google-generativeai
-gspread
-oauth2client
-Pillow
+google-generativeai>=0.8.3
+streamlit>=1.35.0
+gspread>=6.1.0
+oauth2client>=4.1.3
+Pillow>=10.0.0
+pandas
